--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,1 +1,30 @@
-/* Start coding here */
+  header {
+    background-color: #8aa2b5;
+    padding: 20px;
+  }
+  
+  header h1 {
+    color: #2c3e50;
+    margin: 0;
+  }
+  
+  .card {
+    width: 400px;
+    border: 2px solid #2c3e50;
+    background-color: #dde6ed;
+    padding: 20px;
+    margin: 40px;
+  }
+  
+  .card h2 {
+    color: #2c3e50;
+    margin-top: 0;
+  }
+  
+  .box {
+    width: 300px;
+    height: 100px;
+    background-color: #f2f2f2;
+    border: 1px solid #bbb;
+  }
+  
